--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ C       <header>
             <h2>اطلب عروض أسعار لمواد البناء الآن</h2>
             <div class="items">
                 <div class="item">
-                    <a href="form.html">
-                      <img src="img/fet1.jpg" /> alt="image">
+                    <a href="multifrom.html">
+                        <img src="img/fet1.jpg" /> alt="image">
                         <div class="info">
                             <h3>خرسانة جاهزة</h3>
                             <div class="words">
@@ -91,7 +91,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="form.html">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>أسمنت معبأ</h3>
@@ -104,7 +104,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="form.html">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>أسمنت سايب</h3>
@@ -119,7 +119,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>حديد تسليح</h3>
@@ -136,7 +136,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>طوب أحمر طفلى مفرغ</h3>
@@ -149,7 +149,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>طوب أسمنتي مصمت</h3>
@@ -162,7 +162,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>بلوك أسمنتي مفرغ</h3>
@@ -176,7 +176,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>بلاط موزايكو </h3>
@@ -192,7 +192,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet5.jpg" alt="image">
                         <div class="info">
                             <h3>بلاط انترلوك</h3>
@@ -205,7 +205,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet5.jpg" alt="image">
                         <div class="info">
                             <h3>ألياف حديدية للخرسانة</h3>
@@ -220,7 +220,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet4.jpg" alt="image">
                         <div class="info">
                             <h3>رمل</h3>
@@ -233,7 +233,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet3.jpg" alt="image">
                         <div class="info">
                             <h3>مواد كهربائية</h3>
@@ -250,7 +250,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet1.jpg" alt="image">
                         <div class="info">
                             <h3>مواد سباكة</h3>
@@ -266,7 +266,7 @@ C       <header>
                     </a>
                 </div>
                 <div class="item">
-                    <a href="#">
+                    <a href="multifrom.html">
                         <img src="img/fet2.jpg" alt="image">
                         <div class="info">
                             <h3>مواد بناء أخرى</h3>
@@ -309,7 +309,7 @@ C       <header>
           </div>
       </div>
       <div class="link">
-          <a href="#">خطوات طلب عروض الأسعار</a>
+          <a href="multifrom.html">خطوات طلب عروض الأسعار</a>
       </div>
   </div>
 </section>
